[package]
name = "xmr-chain"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "GPL-3.0-only"
include = ["LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]
bytes = "0.4.6"

xmr-primitives = { path = "../primitives" }
xmr-keys = { path = "../keys" }
xmr-rct = { path = "../rct" }
xmr-format = { path = "../format" }
xmr-varint = { path = "../varint" }
