[package]
name = "db"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]

[dependencies]
chain = { path = "../chain" }
hash = { path = "../hash" }
serialization = { path = "../serialization" }
bytes = "0.4.6"
sanakirja = "0.8"
rand = "0.4.2"
linked-hash-map = "0.5.0"
parking_lot = "0.4"

[dev-dependencies]
tempdir = "0.3"
