[package]
name = "xmr-db"
version = "0.1.0"
authors = [
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Parity Technologies <admin@parity.io>"
]
license = "GPL-3.0-only"
include = ["LICENSE-GPL"]

[dependencies]
bytes = "0.4.6"
parking_lot = "0.4"
sanakirja = "0.8"
rand = "0.4.2"

failure = "0.1.1"
failure_derive = "0.1.1"

xmr-chain = { path = "../chain" }
xmr-format = { path = "../format" }
xmr-primitives = { path = "../primitives" }
xmr-storage = { path = "../storage" }

[dev-dependencies]
tempdir = "0.3"
