[package]
name = "network"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
chain = { path = "../chain" }
verification = { path = "../verification" }
primitives = { path = "../primitives" }
uuid = "0.5.0"
log = "0.4.1"

[dev-dependencies]
format = { path = "../format" }
