[package]
name = "xmr-network"
version = "0.1.0"
authors = [
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Parity Technologies <admin@parity.io>"
]
license = "GPL-3.0-only"
include = ["LICENSE-GPL"]

[dependencies]
log = "0.4.1"
uuid = "0.5.0"

xmr-chain = { path = "../chain" }
xmr-primitives = { path = "../primitives" }
xmr-verification = { path = "../verification" }

[dev-dependencies]
xmr-format = { path = "../format" }
