[package]
name = "p2p"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]

[dependencies]
portable-storage = { path = "../portable-storage" }
portable-storage-utils = { path = "../portable-storage-utils" }
network = { path = "../network" }
primitives = { path = "../primitives" }
db = { path = "../db" }

futures = "0.1.17"
futures-cpupool = "0.1.8"
tokio-io = "0.1.1"
tokio-core = "0.1.12"

uuid = "0.5.0"
bytes = "0.4.6"
failure = "0.1.1"
rand = "0.4.2"
log = "0.4.1"

serde = "1.0.27"
serde_derive = "1.0.27"
