[package]
name = "xmr-p2p"
version = "0.1.0"
authors = [
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Parity Technologies <admin@parity.io>"
]
license = "GPL-3.0-only"
include = ["LICENSE-GPL"]

[dependencies]
futures = "0.1.18"
futures-cpupool = "0.1.8"
tokio-io = "0.1.1"
tokio-core = "0.1.12"

bytes = "0.4.6"
parking_lot = "0.4.8"
rand = "0.4.2"
uuid = "0.5.0"

failure = "0.1.1"
log = "0.4.1"

serde = "1.0.27"
serde_derive = "1.0.27"

xmr-levin = { path = "../levin" }
xmr-network = { path = "../network" }
xmr-portable-storage = { path = "../portable-storage" }
xmr-portable-storage-utils = { path = "../portable-storage-utils" }
xmr-primitives = { path = "../primitives" }
xmr-storage = { path = "../storage" }
