[package]
name = "xmr-portable-storage"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.4.6"
failure = "0.1.1"
serde = "1.0.27"
linked-hash-map = "0.5.0"
failure_derive = "0.1.1"

[dev-dependencies]
serde_derive = "1.0.27"
