[package]
name = "xmr-primitives"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "MIT/Apache-2.0"
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
xmr-crypto = { path = "../crypto" }
xmr-format = { path = "../format" }

serde = "1.0.27"
bytes = "0.4.6"
