[package]
name = "xmr-sync"
version = "0.1.0"
authors = [
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Parity Technologies <admin@parity.io>"
]
license = "GPL-3.0-only"
include = ["LICENSE-GPL"]

[dependencies]
log = "0.4.1"
parking_lot = "0.4.8"

xmr-db = { path = "../db" }
xmr-network = { path = "../network" }
xmr-p2p = { path = "../p2p" }
xmr-primitives = { path = "../primitives" }
xmr-storage = { path = "../storage" }
